--- a/_includes/head.html
+++ b/_includes/head.html
@@ -114,6 +114,7 @@
   <script src="/assets/bower_components/typewrite/dist/typewrite.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
+  <script src="/assets/page/home/home.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="/assets/js/jquery.fancybox.js"></script>
@@ -124,24 +125,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
     integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
- <!--
-  <script>
-    (function (d, h, m) {
-      var js, fjs = d.getElementsByTagName(h)[0];
-      if (d.getElementById(m)) { return; }
-      js = d.createElement(h); js.id = m;
-      js.onload = function () {
-        window.makerWidgetComInit({
-          position: "right",
-          widget: "ofeeof264otl2l5g-zspk40eq2gaomj2n-higi2qphmveubksi"
-        })
-      };
-      js.src = "https://makerwidget.com/js/embed.js";
-      fjs.parentNode.insertBefore(js, fjs)
-    }(document, "script", "dhm"))
-  </script>
--->
-
 
   {% if jekyll.environment == "production" %}
 
