--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -133,23 +133,26 @@ layout: default
         <div class="card">
             <h1 class="card-title"> Úspěchy </h1>
             <br />
-            {% for exp in site.author_work_experiences %}
-            <br>
-            <div class="row">
-                <div class="col-md-2">
-                    <img src="{{site.url}}{{site.baseurl}}/assets/page/home/{{ exp.company_logo }}" class="company-logo" />
+            <div class="work-experiences">
+                {% for exp in site.author_work_experiences %}
+                <br>
+                <div class="row">
+                    <div class="col-md-2">
+                        <img src="{{site.url}}{{site.baseurl}}/assets/page/home/{{ exp.company_logo }}" class="company-logo" />
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="experience-title"> {{ exp.designation }}</h4>
+                        <h6 class="experience-info"> {{ exp.date}}</h6>
+                        <p class="experience-desc"> {{ exp.description }} </p>
+                        <p><a href="{{exp.company_url}}" target="_blank">{{ exp.company_url}}</a></p>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <h4 class="experience-title"> {{ exp.designation }}</h4>
-                    <h6 class="experience-info"> {{ exp.date}}</h6>
-                    <p class="experience-desc"> {{ exp.description }} </p>
-                    <p><a href="{{exp.company_url}}" target="_blank">{{ exp.company_url}}</a></p>
-                </div>
+                {% endfor %}
             </div>
-            {% endfor %}
 
-            <div class="work-experiences-more">
+            <div class="work-experiences-more collapse" id="collapseExample">
                 {% for exp in site.author_work_experiences_more %}
+                <br>
                 <div class="row">
                      <div class="col-md-2">
                          <img src="{{site.url}}{{site.baseurl}}/assets/page/home/{{ exp.company_logo }}" class="company-logo" />
@@ -162,7 +165,13 @@ layout: default
                      </div>
                 </div>
                 {% endfor %}
-             </div>
+            </div>
+
+            <div id="work-experiences-more-btn" class="text-center">
+                <button class="orange-button" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    Zobrazit více / méně
+                </button>
+            </div>
         </div>
 
 
