Change gadgets structure

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -109,7 +109,8 @@ layout: default
         <div id="author_projects" class="card">
             <h1 class="card-title">Projekty</h1>
             <br />
-            <div class="container row">
+<!--            <div class="container row">-->
+            <div class="card-deck">
                 {% for projekt in site.projects limit:2 %}
                     <!--PROJECT-->
                     <div class="card blog-post">
