--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,7 +1,7 @@
 <div>
 	<p>Programování, elektronika, 3D modelování</p>
 	<p>ESP32, Arduino, STM32, IoT, Microbit</p>
-	<p>C++, C, Python, PHP, TeX, HTML, JS</p>
-	<p>VSCode, Jetbrains, Fusion 360, Opera, Krusader</p>
-	<p>Linux, Regolith, i3wm, Git, Open-source</p>
+	<p>C++, C, Python, PHP, JS, TS, TeX</p>
+	<p>VSCode, Jetbrains, Fusion 360, Opera</p>
+	<p>Linux, Apple, i3, Git, Open-source</p>
 </div>
