Add two posts, update more

--- a/_includes/button_generic.html
+++ b/_includes/button_generic.html
@@ -1,2 +1,12 @@
-<a href="{{include.url}}" target="_blank"><button class="orange-button zoom"><i class="{{include.icon}} fa-lg"
-                                                                                style="margin-right:8px;">&#8203;</i>&#8203;{{include.text}}</button></a>
+<!--Icons: https://fontawesome.com/v5/search -->
+
+<!--url="https://www.printables.com"-->
+<!--text="3D model krabičky"-->
+<!--icon="fas fa-box-open"-->
+
+
+<a href="{{include.url}}" target="_blank">
+    <button class="orange-button zoom"><i class="{{include.icon}} fa-lg"
+                                          style="margin-right:8px;">&#8203;</i>&#8203;{{include.text}}
+    </button>
+</a>
