--- a/_includes/head.html
+++ b/_includes/head.html
@@ -93,7 +93,7 @@
   <link rel="stylesheet" href="/assets/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css" />
   <link rel="stylesheet" type="text/css" href="/assets/css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="/assets/css/custom-style.css" />
-  <!-- <link rel="stylesheet" type="text/css" href="/assets/css/monokai.css"> -->
+  <link rel="stylesheet" type="text/css" href="/assets/css/monokai.css">
 
 
   <!-- Fonts-->
