Add analytics hotjar

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -118,7 +118,7 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="/assets/js/jquery.fancybox.js"></script>
-  
+
 
  <!-- Github Button -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -137,6 +137,8 @@
 
     gtag('config', '{{ site.google_analytics }}');
   </script>
+
+  {%- include hotjar_analytics.html -%}
 
   {% endif %}
 
