--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,8 @@ layout: default
 
 <!-- Blog Post Breadcrumbs -->
 
+<!--<base target="_blank" />-->
+
 {%- include blog_post_breadcrumb.html -%}
 
 <div class="row" id="blog-post-container">
