--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,9 +6,9 @@ layout: default
     <div class="col-lg-4 offset-md-1">
 
         <div class="card" id="profile-card">
-            <a href="/">
+            <div>
                 <img src="{{site.url}}{{site.baseurl}}/assets/img/profile.png" class="profile-img">
-            </a>
+            </div>
             <h1 class="profile-name"> {{ site.title }}</h1>
              <p class="profile-bio"> {{ site.subtitle }}</p>
             {% if site.github_username %}
