--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,10 @@ layout: default
             </div>
             <h1 class="profile-name"> {{ site.title }}</h1>
              <p class="profile-bio"> {{ site.subtitle }}</p>
+            {% if site.github_username_sponsor %}
+                {%- include github_sponsor_button.html -%}
+            {% endif %}
+
             {% if site.github_username %}
               {%- include github_follow_button.html -%}
             {% endif %}
