--- a/_includes/image-h.html
+++ b/_includes/image-h.html
@@ -1,3 +1,7 @@
-<a style="text-decoration: none;" href="{{ site.url }}{{ site.baseurl }}/assets/blog/{{ page.media_folder }}/{{ include.url }}"  data-fancybox="gallery" data-caption="{{ include.description }}">
-	<img class="gallery" src="{{ site.url }}{{ site.baseurl }}/assets/blog/{{ page.media_folder }}/{{ include.url }}" alt="{{ include.description }}"  height="{{ include.h }}"/>
-</a>
+{%
+picture
+half-width
+/assets/blog/{{ page.media_folder }}/{{ include.url }}
+--alt {{ include.description }}
+--picture class="gallery standart"
+%}
