Add photo, about me, fix typo

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -2,6 +2,7 @@
 	<p>Programování, elektronika, 3D modelování</p>
 	<p>ESP32, Arduino, STM32, IoT, Microbit</p>
 	<p>C++, C, Python, PHP, JS, TS, TeX</p>
-	<p>VSCode, Jetbrains, Fusion 360, Opera</p>
+	<p>React, Jekyll, Google API, WordPress</p>
+	<p>VSCode, JetBrains, Fusion 360, Opera</p>
 	<p>Linux, Apple, i3, Git, Open-source</p>
 </div>
