--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,9 @@ layout: compress
         <div style="padding-bottom: 12px;"></div>
         <div class="col-lg-12">
             {{ content }}
-        </div>        
+        </div>
         {%- include footer.html -%}
+        {% include new-window-fix.html %}
     </div>
 </body>
 </html>
