--- a/_includes/head.html
+++ b/_includes/head.html
@@ -129,17 +129,9 @@
 
   {% if jekyll.environment == "production" %}
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149505692-2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', '{{ site.google_analytics }}');
-  </script>
 
   {%- include hotjar_analytics.html -%}
+  {%- include google_analytics.html -%}
 
   {% endif %}
 
