--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -1,2 +1,13 @@
-<p>Jmenuji se Jakub Andrýsek, ale všichni mi říkají Kubo. Jsem programátor, elektronik a 3D modelář v <a target="_blank" href="https://helceletka.cz/robotarna/">Robotárně</a>.</p>
-<p>Během střední školy rád programuji a tvořím nástroje, které lidem ušetři čas a zjednoduší rutinní práci.</p>
+{% if page.lang == 'en' %}
+<p>Hi, I'm Jacob, a high school student of computer science from the Czech Republic.</p>
+<p>I like programming, electronics, 3D modeling and robotics.
+    I'm usually building tools and products that make developers' lives easier and more productive.
+    I'm also a big fan of open-source software and hardware.
+    Most of my projects are open-source, and you can find them on my <a href="https://github.com/JakubAndrysek">GitHub</a> profile.
+</p>
+{% else %}
+    <p>Jmenuji se Jakub Andrýsek, ale všichni mi říkají Kubo. Jsem programátor, elektronik a 3D modelář v <a target="_blank" href="https://helceletka.cz/robotarna/">Robotárně</a>.</p>
+    <p>Během střední školy rád programuji a tvořím nástroje, které lidem ušetři čas a zjednoduší rutinní práci.</p>
+{% endif %}
+
+
