--- a/_layouts/home_en.html
+++ b/_layouts/home_en.html
@@ -117,13 +117,14 @@ layout: default
     </div>
      <div class="col-lg-7">
         <div class="card">
-            <h1 class="card-title">O mně</h1>
+            <h1 class="card-title">About me</h1>
+            Thispage {{ page.lang }} {{ page.title }}
             {% include about_me.html %}
         </div>
 
         {% if site.show_author_project_details == true %}
         <div id="author_projects" class="card">
-            <h1 class="card-title">Projekty</h1>
+            <h1 class="card-title">Projects</h1>
             <br />
 <!--            <div class="container row">-->
             <div class="card-deck">
@@ -148,7 +149,7 @@ layout: default
         {% endif %}
 
         <div class="card">
-            <h1 class="card-title"> Úspěchy </h1>
+            <h1 class="card-title">Achievements </h1>
             <br />
             <div class="work-experiences">
                 {% for exp in site.author_work_experiences %}
@@ -194,7 +195,7 @@ layout: default
 
         {% if site.show_author_education_details == true %}
         <div class="card">
-            <h1 class="card-title">Studium</h1>
+            <h1 class="card-title">Education</h1>
             <br />
             {% for detail in site.author_education_details %}
             {% if detail.visibility == true %}
