Change web to english

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,3 +1,4 @@
+{% if page.lang == 'cs' %}
 <div>
 	<p>Programování, elektronika, 3D modelování</p>
 	<p>ESP32, Arduino, STM32, IoT, Microbit</p>
@@ -6,3 +7,13 @@
 	<p>VSCode, JetBrains, Fusion 360, Opera</p>
 	<p>Linux, Apple, i3, Git, Open-source</p>
 </div>
+{% else %}
+<div>
+	<p>Programming, electronics, 3D modeling</p>
+	<p>ESP32, Arduino, STM32, IoT, Microbit</p>
+	<p>C++, C, Python, PHP, JS, TS, TeX</p>
+	<p>React, Jekyll, Google API, WordPress</p>
+	<p>VSCode, JetBrains, Fusion 360, Opera</p>
+	<p>Linux, Apple, i3, Git, Open-source</p>
+</div>
+{% endif %}
