--- a/_includes/equipmentCard.html
+++ b/_includes/equipmentCard.html
@@ -1,5 +1,5 @@
 {% comment %}
-    Usage: {% include vybaveniCard.html image="laptop.png" title="Můj notebook & software" description="Soupis zajímavého softwaru v mém počítači" href="software.html"%}
+    Usage: {% include equipmentCard.html image="laptop.png" title="Můj notebook & software" description="Soupis zajímavého softwaru v mém počítači" href="software.html"%}
 {% endcomment %}
 
 <!--<div class="col-auto ">-->
