--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
 <div class="row">
     <div class="col-md-6">
         <div class="card">
-            <div class="card-header"> O mě </div>
+            <div class="card-header">About me</div>
             <div class="card-body">
                 <p class="author_bio">{% include about_me.html %}</p>
                 {%- include github_star_button.html -%}
@@ -33,7 +33,7 @@ layout: default
     </div>
     <div class="col-md-6">
         <div class="card">
-            <div class="card-header">Užitečné odkazy </div>
+            <div class="card-header">Useful links </div>
             <div class="card-body text-dark">
                 {% for i in site.urls %}
                 <li >
