--- a/_includes/contact_me_form.html
+++ b/_includes/contact_me_form.html
@@ -1,17 +1,17 @@
 <!-- Replace the email with your own formspree email -->
-<form action="https://formspree.io/f/{{ site.formspree_form_id }}" method="POST" >
+<form action="https://formspree.io/f/{{ site.formspree_form_id }}" method="POST">
     <div class="form-group">
-      <label for="contact_form_name">Vaše jméno :</label>
-      <input type="text" class="form-control" name="name" id="contact_form_name" placeholder="Zadejte Vaše jméno">
-     </div> 
-     <div class="form-group">
-       <label for="contact_form_email">Váš Email :</label>
-      <input type="email" class="form-control" name="_replyto" id="contact_form_email" placeholder="Zadejte Váš email">
-     </div> 
-     <div class="form-group">
-       <label for="contact_form_message"> Zpráva :</label>
-      <textarea name="message" class="form-control" id="contact_form_message" placeholder="Zadejte zprávu"></textarea>
-     </div> 
-      <!-- <input type="submit" value="Odeslat"> -->
-      <button type="submit" class="btn btn-primary">Odeslat</button>
- </form>
+        <label for="contact_form_name">Your Name :</label>
+        <input type="text" class="form-control" name="name" id="contact_form_name" placeholder="Input your name">
+    </div>
+    <div class="form-group">
+        <label for="contact_form_email">Your Email :</label>
+        <input type="email" class="form-control" name="_replyto" id="contact_form_email" placeholder="Input your email">
+    </div>
+    <div class="form-group">
+        <label for="contact_form_message">Message :</label>
+        <textarea name="message" class="form-control" id="contact_form_message" placeholder="Input message"></textarea>
+    </div>
+    <!-- <input type="submit" value="Odeslat"> -->
+    <button type="submit" class="btn btn-primary">Send</button>
+</form>
