--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -29,8 +29,12 @@ image: profile.png
                              alt="{{ post.title }}">
                     </a>
                     <div class="card-body center">
-                        <h4 class="card-title"><a href="{{ post.url | prepend: site.baseurl }}"
-                                                  data-disqus-identifier="{{ post.url }}">{{ post.title }}</a></h4>
+                        <h4 class="card-title">
+                            <a href="{{ post.url | prepend: site.baseurl }}" data-disqus-identifier="{{ post.url }}">
+                                {{ post.title }}
+                                {% include language_identifier.html lang=post.lang %}
+                            </a>
+                        </h4>
                         <h6 class="card-subtitle mb-2 text-muted">{{ post.date | date: "%d. %m. %Y" }}</h6>
                         <p class="card-text">{{ post.description }} </p>
                         <span class="disqus-comment-count" data-disqus-identifier="{{ post.url }}"></span>
