--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -5,7 +5,7 @@ layout: default
 <div class="row">
     <div class="col-lg-6 offset-md-3">
         <div class="card">
-                <h1 class="card-title"> Kontaktujte mě </h1>
+                <h1 class="card-title">Contact</h1>
                  {%- include contact_me_form.html -%}
              </div>
     </div>
