--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -94,20 +94,20 @@ layout: default
         </div>
         <div class="hide-small">
             <div class="card text-center">
-                <h1> Skilly </h1>
+                <h1> Skills</h1>
                 {%- include author_skills.html -%}
             </div>
 
 
             {% if site.wakatime_username %}
             <div class="card text-center">
-                <h1>Moje programátorská aktivita </h1>
+                <h1>My coding activity</h1>
                 {%- include coding_activity.html -%}
             </div>
             {% endif %}
 
             <div class="card text-center">
-                <h1>Timeline projektů</h1>
+                <h1>Timeline of projects</h1>
                 <codersrank-timeline type="portfolio" username="jakubandrysek" branding="false"></codersrank-timeline>
             </div>
 
@@ -117,13 +117,13 @@ layout: default
     </div>
      <div class="col-lg-7">
         <div class="card">
-            <h1 class="card-title">O mně</h1>
+            <h1 class="card-title">About me</h1>
             {% include about_me.html %}
         </div>
 
         {% if site.show_author_project_details == true %}
         <div id="author_projects" class="card">
-            <h1 class="card-title">Projekty</h1>
+            <h1 class="card-title">Projects</h1>
             <br />
 <!--            <div class="container row">-->
             <div class="card-deck">
@@ -134,21 +134,27 @@ layout: default
                         <img class="card-img-top" src="{{site.url}}{{site.baseurl}}/assets/blog/{{ site.categories[projekt][0].folder }}/{{ site.categories[projekt][0].media_folder }}/{{ site.categories[projekt][0].thumbnail }}">
                       </a>
                       <div class="card-body center">
-                        <h4 class="card-title">{{projekt}}</h4>
-                          <h6 class="card-subtitle mb-2 ">{{ site.categories[projekt][0].description }}</h6>
+                        <h4 class="card-title">
+                            {{projekt}}
+                        </h4>
+                          <h6 class="card-subtitle mb-2 ">
+                              {{ site.categories[projekt][0].description }}
+                              {% assign site_lang = site.categories[projekt][0].lang %}
+                              {% include language_identifier.html lang=site_lang %}
+                          </h6>
                       </div>
                     </div>
                 {% endfor %}
             </div>
             <div class="text-center">
-                <a href="/projekty"><button class="orange-button">Další projekty</button></a>
+                <a href="/projects"><button class="orange-button">More projects</button></a>
                 <a href="/blog"><button class="orange-button">Blog</button></a>
             </div>
         </div>
         {% endif %}
 
         <div class="card">
-            <h1 class="card-title"> Úspěchy </h1>
+            <h1 class="card-title">Achievements </h1>
             <br />
             <div class="work-experiences">
                 {% for exp in site.author_work_experiences %}
@@ -186,7 +192,7 @@ layout: default
 
             <div id="work-experiences-more-btn" class="text-center">
                 <button class="orange-button" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    Zobrazit více / méně
+                    Show more / less
                 </button>
             </div>
         </div>
@@ -194,7 +200,7 @@ layout: default
 
         {% if site.show_author_education_details == true %}
         <div class="card">
-            <h1 class="card-title">Studium</h1>
+            <h1 class="card-title">Education</h1>
             <br />
             {% for detail in site.author_education_details %}
             {% if detail.visibility == true %}
