Fix links, add cs experiences

--- a/_layouts/home_cs.html
+++ b/_layouts/home_cs.html
@@ -169,9 +169,9 @@ layout: default
                              class="company-logo"/>
                     </div>
                     <div class="col-md-6">
-                        <h4 class="experience-title"> {{ exp.designation }}</h4>
-                        <h6 class="experience-info"> {{ exp.date}}</h6>
-                        <p class="experience-desc"> {{ exp.description }} </p>
+                        <h4 class="experience-title"> {{ exp.designation_cs }}</h4>
+                        <h6 class="experience-info"> {{ exp.date_cs }}</h6>
+                        <p class="experience-desc"> {{ exp.description_cs }} </p>
                         <p><a href="{{exp.company_url}}" target="_blank">{{ exp.company_url}}</a></p>
                     </div>
                 </div>
@@ -187,9 +187,9 @@ layout: default
                              class="company-logo"/>
                     </div>
                     <div class="col-md-6">
-                        <h4 class="experience-title"> {{ exp.designation }}</h4>
-                        <h6 class="experience-info"> {{ exp.date}}</h6>
-                        <p class="experience-desc"> {{ exp.description }} </p>
+                        <h4 class="experience-title"> {{ exp.designation_cs }}</h4>
+                        <h6 class="experience-info"> {{ exp.date_cs}}</h6>
+                        <p class="experience-desc"> {{ exp.description_cs }} </p>
                         <p><a href="{{exp.company_url}}" target="_blank">{{ exp.company_url}}</a></p>
                     </div>
                 </div>
@@ -218,8 +218,8 @@ layout: default
                 </div>
                 <div class="col-md-6">
                     <h4 class="experience-title"> {{detail.college_degree }}</h4>
-                    <h6 class="experience-info">{{detail.college_name}}</h6>
-                    <p class="experience-desc"> {{detail.description}} </p>
+                    <h6 class="experience-info">{{detail.college_name_cs}}</h6>
+                    <p class="experience-desc"> {{detail.description_cs}} </p>
                     <p><a href="{{detail.college_url}}" target="_blank">{{ detail.college_url}}</a></p>
                 </div>
             </div>
