--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -1,4 +1,4 @@
-{% if page.lang == 'cs' %}
+{% if page.url == "/cs" %}
 <p>Jmenuji se Jakub Andrýsek, ale všichni mi říkají Kubo. Jsem programátor, elektronik a 3D modelář v <a target="_blank" href="https://helceletka.cz/robotarna/">Robotárně</a>.</p>
 <p>Během střední školy rád programuji a tvořím nástroje, které lidem ušetři čas a zjednoduší rutinní práci.</p>
 {% else %}
@@ -8,6 +8,3 @@
     Most of my projects are open-source, and you can find them on my <a href="https://github.com/JakubAndrysek">GitHub</a> profile.
 </p>
 {% endif %}
-
-
-
