--- a/_includes/blog_post_comments.html
+++ b/_includes/blog_post_comments.html
@@ -1,18 +1,16 @@
-<script>
-    var disqus_config = function () {
-        this.page.url = "{{ site.url }}{{ page.url }}"; /* Replace PAGE_URL with your page's canonical URL variable */
-        this.page.identifier = "{{ page.id }}"; /* Replace PAGE_IDENTIFIER with your page's unique identifier variable */
-    };
-
-
-    (function () { /* DON'T EDIT BELOW THIS LINE */
-        var d = document,
-            s = d.createElement('script');
-        s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
+<script src="https://giscus.app/client.js"
+        data-repo="JakubAndrysek/Kubaandrysek.cz"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkyNTMyMDMxODE="
+        data-category="Page-comments"
+        data-category-id="DIC_kwDODxeS7c4CWJcs"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="dark_dimmed"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
 </script>
-<noscript>Please enable JavaScript to view the
-    <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript>
