Change about me intro

--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -2,9 +2,9 @@
 <p>Jmenuji se Jakub Andrýsek, ale všichni mi říkají Kubo. Jsem programátor, elektronik a 3D modelář v <a target="_blank" href="https://helceletka.cz/robotarna/">Robotárně</a>.</p>
 <p>Během střední školy rád programuji a tvořím nástroje, které lidem ušetři čas a zjednoduší rutinní práci.</p>
 {% else %}
-<p>Hi, I'm Jacob, a high school computer science student from the Czech Republic with a passion for programming, electronics, 3D modeling and robotics.</p>
-<p>My mission is to build innovative tools and products that make developers' lives easier and more productive.
+<p>Hi, I'm Jacob, a high school computer science student from the Czech Republic passionate about programming, electronics, 3D modelling and robotics.</p>
+<p>I aim to build innovative tools and products that make developers' lives easier and more productive.
     I'm also a big fan of open-source software and hardware.
-    Most of my projects are open-source, and you can find them on my <a href="https://github.com/JakubAndrysek">GitHub</a> profile.
+    Most of my projects are open-source; you can find them on my <a href="https://github.com/JakubAndrysek">GitHub</a> profile.
 </p>
 {% endif %}
