--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
     {% if page.noindex %}
     <meta name="robots" content="noindex">
     {% endif %}
+    <meta name="author" content="Jakub Andrýsek">
     {% if page.title %}
     <meta content="{{ page.title }}" property="og:title">
     <meta content="article" property="og:type">
