--- a/_includes/download_local.html
+++ b/_includes/download_local.html
@@ -1,1 +1,1 @@
-<a href="{{ site.url }}{{ site.baseurl }}/assets/blog/{{include.url}}" target="_blank"><button class="orange-button"><i class="fa fa-download" style="margin-right:8px;"></i>{{include.text}}</button></a>
+<a href="{{ site.url }}{{ site.baseurl }}/assets/blog/{{page.media_folder}}/{{include.url}}" target="_blank"><button class="orange-button"><i class="fa fa-download" style="margin-right:8px;"></i>{{include.text}}</button></a>
